--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dev Tools</title>
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="./icons/icons8-productivity-32.png"
+    />
+    <title>Dev-Tool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
