--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       href="./icons/icons8-productivity-32.png"
     />
-    <title>Dev-Tool</title>
+    <title>Dev-Tools</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -17,8 +17,5 @@
     <div id="detail"></div>
     <div id="portal"></div>
     <div id="root"></div>
-
-  
   </body>
-
 </html>
